--- a/Lift.UI/Views/Home/Index.cshtml
+++ b/Lift.UI/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <title>幽暗城</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="~/Assets/Bootstrap3.3.7/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Assets/Bootstrap3.3.7/css/bootstrap.css" rel="stylesheet" />
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="~/Assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
@@ -35,10 +35,21 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="~/Assets/jQuey/jquery-1.11.3.js"></script>
 
-    <script src="~/Assets/Bootstrap3.3.7/Scripts/bootstrap.js"></script>
+    <script src="~/Assets/Bootstrap3.3.7/js/bootstrap.js"></script>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="~/Assets/js/ie10-viewport-bug-workaround.js"></script>
+    <style type="text/css">
+        .nav-sidebar{
+            margin-bottom:0;
+        }
+        .nav-sub>li>a{
+            
+        }
+        .nav-sub>li>a:hover{
+            background-color:red;
+        }
+    </style>
 </head>
 
 <body>
@@ -69,27 +80,31 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-3 col-md-2 sidebar">
+            <div class="col-md-3 sidebar">
                 <ul class="nav nav-sidebar">
-                    <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Reports</a></li>
-                    <li><a href="#">Analytics</a></li>
-                    <li><a href="#">Export</a></li>
+                    <li><a data-toggle="collapse" href="#collapseExample">一次加工</a></li>
+                    <li >
+                        <ul id="collapseExample" class="nav collapse nav-sub">
+                            <li><a href="#"><span style="padding-left:10px">Reports</span></a></li>
+                            <li><a href="#" style="padding-left:10px">Analytics</a></li>
+                            <li><a href="#">Export</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav nav-sidebar">
-                    <li><a href="">Nav item</a></li>
-                    <li><a href="">Nav item again</a></li>
-                    <li><a href="">One more nav</a></li>
-                    <li><a href="">Another nav item</a></li>
-                    <li><a href="">More navigation</a></li>
-                </ul>
-                <ul class="nav nav-sidebar">
-                    <li><a href="">Nav item again</a></li>
-                    <li><a href="">One more nav</a></li>
-                    <li><a href="">Another nav item</a></li>
+                    <li><a data-toggle="collapse" href="#collapseExample2">二次加工</a></li>
+                    <li>
+                        <ul id="collapseExample2" class="nav collapse nav-sub">
+                            <li><a href="#">加工</a></li>
+                            <li><a href="#">加工三次</a></li>
+                            <li><a href="#">加工很多次</a></li>
+                            <li><a href="#">加工很多次哦</a></li>
+                            <li><a href="#">加工很多次哦啊</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="col-sm-9 col-sm-offset-3 col-md-21 col-md-offset-3 main">
                 <h1 class="page-header">Dashboard</h1>
 
                 <div class="row placeholders">
