--- a/Lift.UI/Views/Home/Index.cshtml
+++ b/Lift.UI/Views/Home/Index.cshtml
@@ -1,136 +1,6 @@
 ﻿@{
-    Layout = null;
-    List<Lift.Model.MenuInfo> lst = (List<Lift.Model.MenuInfo>)this.ViewData["lstMenuInfo"];
+    ViewBag.Title = "主页";
+    Layout = "~/Views/LayoutFluid.cshtml";
 }
 
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>幽暗城</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/Assets/Bootstrap3.3.7/css/bootstrap.css" rel="stylesheet" />
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="~/Assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="~/Assets/css/layout-fluid.css" rel="stylesheet" />
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <script src="~/Assets/js/ie-emulation-modes-warning.js"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-        <script src="~/Assets/js/ie8-responsive-file-warning.js"></script>
-        <script src="~/Assets/js/html5shiv.min.js"></script>
-        <script src="~/Assets/js/respond.min.js"></script>
-    <![endif]-->
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="~/Assets/jQuey/jquery-1.11.3.js"></script>
-
-    <script src="~/Assets/Bootstrap3.3.7/js/bootstrap.js"></script>
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="~/Assets/js/ie10-viewport-bug-workaround.js"></script>
-    <style type="text/css">
-        .nav-sidebar{
-            margin-bottom:0;
-        }
-        .nav-sidebar>li>a{
-            font-weight:700;
-        }
-        .nav-sub>li>a>span{
-            padding-left:15px;
-            
-        }
-        .nav-sub>li>a:hover{
-            border-left:2px solid #428bca;
-            color:#337ab7;
-        }
-        .active>a{
-            color: #fff;
-            background-color: #428bca;
-        }
-        .navbar-nav>li>a:hover{
-            border-bottom:2px solid #ff0000;
-        }
-        .navbar-nav>.active>a{
-            border-bottom:2px solid #ff0000;
-        }
-    </style>
-
-    <script type="text/javascript">
-        $(function () {
-
-            $(".nav-sidebar>li>a").click(function () {
-                var brothers = $(this).parents("ul")//所在ul
-                    .siblings("ul")//所有兄弟的ul
-                    .find("li>ul")
-                    .removeClass("in");
-                
-            });
-        });
-
-    </script>
-</head>
-
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">千针石林</a>
-            </div>
-            <ul class="nav navbar-nav navbar-left">
-                <li class="active"><a href="#">dashboard</a></li>
-                <li><a href="#">逆变器</a></li>
-                <li><a href="#">镇流器</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Settings</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Help</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-3 sidebar">
-                <ul class="nav nav-sidebar">
-                    <li><a data-toggle="collapse" href="#collapseExample">一次加工</a></li>
-                    <li >
-                        <ul id="collapseExample" class="nav collapse nav-sub">
-                            <li class="active"><a href="#"><span>Reports</span></a></li>
-                            <li><a href="#"><span>Reports2</span></a></a></li>
-                            <li><a href="#"><span>Reports3</span></a></a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <ul class="nav nav-sidebar">
-                    <li><a data-toggle="collapse" href="#collapseExample2">二次加工</a></li>
-                    <li>
-                        <ul id="collapseExample2" class="nav collapse nav-sub">
-                            <li><a href="#"><span>加工</span></a></li>
-                            <li><a href="#"><span>加工三次</span></a></li>
-                            <li><a href="#"><span>加工很多次</span></a></li>
-                            <li><a href="#"><span>加工很多次哦</span></a></li>
-                            <li><a href="#"><span>加工很多次哦啊</span></a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-21 col-md-offset-3 main">
-                <p>内容</p>
-                <p class="text-center">版权所有&copy;丢了光影 2016-2020</p>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+<h2>主页</h2>
