bootstrap表单样式+easyui表单组件+easyui的表单校验

--- a/Lift.UI/Views/HyperBootstrap/Biaodan.cshtml
+++ b/Lift.UI/Views/HyperBootstrap/Biaodan.cshtml
@@ -41,7 +41,7 @@
         });
     </script>
 }
-
+<p class="h4">bootstrap表单样式+easyui表单组件+easyui的表单校验</p>
 <p >bootstrap和easyui的样式有冲突，全家桶混用会出问题，比如涉及到panel和easyui数组件</p>
 <p >所以bootstrap全家桶+easyui单个组件配合使用</p>
 
