--- a/Lift.UI/Views/Bootstrap/Biaodan.cshtml
+++ b/Lift.UI/Views/Bootstrap/Biaodan.cshtml
@@ -5,21 +5,21 @@
 }
 
 @section style{
-<link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/tooltip.css" rel="stylesheet" />
-<link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/validatebox.css" rel="stylesheet" />
+    <link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/tooltip.css" rel="stylesheet" />
+    <link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/validatebox.css" rel="stylesheet" />
     <style type="text/css">
-        .form-control{
-            width:240px;
+        .form-control {
+            width: 240px;
         }
     </style>
 }
 
 @section script{
-<script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.parser.js"></script>
-<script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.tooltip.js"></script>
-<script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.validatebox.js"></script>
-<script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.form.js"></script>
-<script src="~/Assets/jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.parser.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.tooltip.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.validatebox.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.form.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
     <script type="text/javascript">
         $(function () {
 
@@ -29,23 +29,23 @@
                 //低版本全部利用iframe实现表单ajax提交，
                 //优点：ajax提交文件，
                 //缺点：确实ajax全局设置，比如全局模态框避免重复提交
-                onSubmit: function(){    
+                onSubmit: function(){
                     var isValid = $(this).form('validate');
                     console.log("表单校验结果", isValid);
                     return isValid;	// 返回false终止表单提交
-                },    
-                success:function(data){    
+                },
+                success:function(data){
                     console.log("表单提交成功",data);
-                }    
-            }); 
+                }
+            });
         });
     </script>
 }
 <p class="h4">bootstrap表单样式+easyui表单组件+easyui的表单校验</p>
-<p >bootstrap和easyui的样式有冲突，全家桶混用会出问题，比如涉及到panel和easyui数组件</p>
-<p >所以bootstrap全家桶+easyui单个组件配合使用</p>
+<p>bootstrap和easyui的样式有冲突，全家桶混用会出问题，比如涉及到panel和依赖panel的组件</p>
+<p>所以bootstrap全家桶+easyui单个组件配合使用</p>
 
-<form >
+<form>
     <div class="form-group">
         <label for="exampleInputEmail1">Email address</label>
         <input type="text" class="form-control easyui-validatebox" data-options="required:true" id="exampleInputEmail1" placeholder="Email">
