--- a/Lift.UI/Views/LayoutFluid.cshtml
+++ b/Lift.UI/Views/LayoutFluid.cshtml
@@ -192,9 +192,12 @@
             </div>
             <div class="col-md-21 col-md-offset-3 main">
                 @RenderBody()
-                <p class="text-center">版权所有&copy;丢了光影 2016-2020</p>
             </div>
         </div>
+    </div>
+
+    <div class="col-md-offset-3 navbar-fixed-bottom">
+        <p class="text-center" style="margin:0 0"><small>版权所有&copy;丢了光影 2016-2020</small></p>
     </div>
 </body>
 </html>
