--- a/Lift.UI/Views/Account/Index.cshtml
+++ b/Lift.UI/Views/Account/Index.cshtml
@@ -12,7 +12,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+    <title>登录-艾泽拉斯国家地理</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/Assets/Bootstrap3.3.7/css/bootstrap.css" rel="stylesheet" />
