--- a/Lift.UI/Views/Account/Index.cshtml
+++ b/Lift.UI/Views/Account/Index.cshtml
@@ -103,12 +103,12 @@
         </div>
         <div class="col-md-4">
             <form class="form-signin">
-                <h4 class="form-signin-heading">账号登陆</h4>
+                <h4 class="form-signin-heading">账号登录</h4>
                 <input type="text"  class="form-control" placeholder="用户名"  />
                 <input type="password"  class="form-control" placeholder="密码" />
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox" value="remember-me"> 下次自动登陆
+                        <input type="checkbox" value="remember-me"> 下次自动登录
                     </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
