--- a/Lift.UI/Views/Account/Index.cshtml
+++ b/Lift.UI/Views/Account/Index.cshtml
@@ -38,83 +38,111 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="~/Assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/tooltip.css" rel="stylesheet" />
+    <link href="~/Assets/jquery-easyui-1.5.2/themes/bootstrap/validatebox.css" rel="stylesheet" />
+
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.parser.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.tooltip.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.validatebox.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/plugins/jquery.form.js"></script>
+    <script src="~/Assets/jquery-easyui-1.5.2/locale/easyui-lang-zh_CN.js"></script>
     <style type="text/css">
         body {
-            padding-top: 40px;
+            /*padding-top: 40px;*/
             /*padding-bottom: 40px;*/
             background-color: #eee;
         }
 
         .form-signin {
-            max-width: 330px;
-            padding: 15px;
-            margin: 0 auto;
-        }
-        body{
-            overflow-x:hidden;
+            max-width: 240px;
+            padding-top: 30px;
+            padding-left:10px;
         }
     </style>
+    <script type="text/javascript">
+        $(function () {
+
+            $("form").form({
+                url: "",
+                iframe: false,
+                //低版本全部利用iframe实现表单ajax提交，
+                //优点：ajax提交文件，
+                //缺点：确实ajax全局设置，比如全局模态框避免重复提交
+                onSubmit: function(){
+                    var isValid = $(this).form('validate');
+                    console.log("表单校验结果", isValid);
+                    return isValid;	// 返回false终止表单提交
+                },
+                success:function(data){
+                    console.log("表单提交成功",data);
+                }
+            });
+        });
+    </script>
 </head>
 
-<body >
-    <div class="page-header col-md-offset-6">
-        <h1>艾泽拉斯国家地理</h1>
-    </div>
-    <div class="row">
-   
-        <div class="col-md-8 col-md-offset-6">
-            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="1500">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
+<body>
+    <div class="container">
+        <div class="page-header">
+            <h1>艾泽拉斯国家地理</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-16">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel" data-interval="1500">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    </ol>
 
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item active">
-                        <img src="~/Assets/img/img10.jpg" />
-                        <div class="carousel-caption">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="~/Assets/img/img10.jpg" />
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="~/Assets/img/img11.jpg" />
+                            <div class="carousel-caption">
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img src="~/Assets/img/img12.jpg" />
+                            <div class="carousel-caption">
+                            </div>
                         </div>
                     </div>
-                    <div class="item">
-                        <img src="~/Assets/img/img11.jpg" />
-                        <div class="carousel-caption">
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="~/Assets/img/img12.jpg" />
-                        <div class="carousel-caption">
-                        </div>
-                    </div>
+
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
+            <div class="col-md-8">
+                <form class="form-signin">
+                    <h4 class="form-signin-heading">账号登录</h4>
+                    <input type="text" class="form-control easyui-validatebox" data-options="required:true" placeholder="用户名" />
+                    <input type="password" class="form-control easyui-validatebox" data-options="required:true" placeholder="密码" />
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="remember-me"> 下次自动登录
+                        </label>
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
+                </form>
+            </div>
+
         </div>
-        <div class="col-md-4">
-            <form class="form-signin">
-                <h4 class="form-signin-heading">账号登录</h4>
-                <input type="text"  class="form-control" placeholder="用户名"  />
-                <input type="password"  class="form-control" placeholder="密码" />
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> 下次自动登录
-                    </label>
-                </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
-            </form>
-        </div>
-     
+       
     </div>
     <div class="navbar-fixed-bottom">
         <p class="text-center" style="margin:0 0"><small>版权所有&copy;丢了光影 2016-2020</small></p>
