--- a/Lift.UI/Views/Easyui/DemoList.cshtml
+++ b/Lift.UI/Views/Easyui/DemoList.cshtml
@@ -11,9 +11,17 @@
         .tree-demo{
             position:fixed;
             top:61px;
-            right:10px;
-            bottom:10px;
+            right:1px;
+            bottom:20px;
             overflow-y:scroll;
+        }
+        .tree-demo>ul{
+            padding-left:20px;
+        }
+        .tree-demo>button{
+            position:fixed;
+            top:55px;
+            right:35px;
         }
     </style>
 }
@@ -47,13 +55,17 @@
                         $("#code").text(html);
                     });
                 }
-            });  
+           });
+
+           $(".tree-demo>button").click(function () {
+               tree.tree("collapseAll");
+           });
         });
     </script>
 }
 
 <div class="row">
-    <div class="col-md-17">
+    <div class="col-md-18">
         <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
@@ -82,7 +94,7 @@
                 <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
                     <div class="panel-body">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <textarea id="code" class="form-control" rows="20"></textarea>
+                            <textarea id="code" class="form-control" rows="19"></textarea>
                         </div>
                         
                     </div>
@@ -90,8 +102,13 @@
             </div>
         </div>
     </div>
+    <div class="tree-demo col-md-6">
+        <ul id="tt" class=""></ul>
+        <button class="btn btn-xs btn-default">全部折叠</button>
+    </div>
+    
 </div>
-<ul id="tt" class="tree-demo col-md-4"></ul>
+
 
 
 
