--- a/Gutop.Model/Entity.tt
+++ b/Gutop.Model/Entity.tt
@@ -20,7 +20,7 @@ using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Data.Entity.Spatial;
 
-namespace Lift.Model
+namespace Gutop.Model
 {
 <# manager.EndBlock(); #>
  
