--- a/Gutop.Entity/Entity.tt
+++ b/Gutop.Entity/Entity.tt
@@ -20,7 +20,7 @@ using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Data.Entity.Spatial;
 
-namespace Gutop.Model
+namespace Gutop.Entity
 {
 <# manager.EndBlock(); #>
  
