--- a/Gutop.Portal/Views/Account/Index.cshtml
+++ b/Gutop.Portal/Views/Account/Index.cshtml
@@ -64,7 +64,7 @@
         $(function () {
 
             $("form").form({
-                url: "",
+                url: "./login",
                 iframe: false,
                 //低版本全部利用iframe实现表单ajax提交，
                 //优点：ajax提交文件，
@@ -74,8 +74,15 @@
                     console.log("表单校验结果", isValid);
                     return isValid;	// 返回false终止表单提交
                 },
-                success:function(data){
-                    console.log("表单提交成功",data);
+                success: function (data) {
+                    if (!data.data)
+                        data = $.parseJSON(data)
+                    console.log("表单提交成功", data);
+                    if (data.code != 200 || !data.data.targetUrl) {
+                        alert(data.msg);
+                        return;
+                    }
+                    window.location.href = data.data.targetUrl;
                 }
             });
         });
@@ -130,8 +137,8 @@
             <div class="col-md-8">
                 <form class="form-signin">
                     <h4 class="form-signin-heading">账号登录</h4>
-                    <input type="text" class="form-control easyui-validatebox" data-options="required:true" placeholder="用户名" />
-                    <input type="password" class="form-control easyui-validatebox" data-options="required:true" placeholder="密码" />
+                    <input name="LoginName" type="text" class="form-control easyui-validatebox" data-options="required:true" placeholder="用户名" value="eeroom" />
+                    <input name="PassWord" type="password" class="form-control easyui-validatebox" data-options="required:true" placeholder="密码" value="123456" />
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" value="remember-me"> 下次自动登录
