--- a/Gutop.Portal/Views/Account/Index.cshtml
+++ b/Gutop.Portal/Views/Account/Index.cshtml
@@ -141,7 +141,7 @@
                     <input name="PassWord" type="password" class="form-control easyui-validatebox" data-options="required:true" placeholder="密码" value="123456" />
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" value="remember-me"> 下次自动登录
+                            <input type="checkbox" value="true" name="IsPersistent" > 下次自动登录
                         </label>
                     </div>
                     <button class="btn btn-lg btn-primary btn-block" type="submit">登录</button>
