--- a/Gutop.Model/Entity/Entity.tt
+++ b/Gutop.Model/Entity/Entity.tt
@@ -20,7 +20,7 @@ using System.ComponentModel.DataAnnotations;
 using System.ComponentModel.DataAnnotations.Schema;
 using System.Data.Entity.Spatial;
 
-namespace Gutop.Entity
+namespace Gutop.Model.Entity
 {
 <# manager.EndBlock(); #>
  
