--- a/Gutop.Portal/Views/LayoutFluid.cshtml
+++ b/Gutop.Portal/Views/LayoutFluid.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
     Layout = null;
-    Gutop.Entity.DTO.MenuInfoWrapper wrapperMenuInfo = (Gutop.Entity.DTO.MenuInfoWrapper)this.ViewData["__wrapperMenuInfo"];
+    Gutop.Model.MenuCollections wrapperMenuInfo = (Gutop.Model.MenuCollections)this.ViewData["__wrapperMenuInfo"];
     wrapperMenuInfo.Value.ForEach(x => x.value.Url = x.GetAllChildren()
         .FirstOrDefault(a => !string.IsNullOrEmpty(a.value.Url))?.value.Url);
     var mathedNav =
-        wrapperMenuInfo.MathedItem?.GetRoot() ?? new Gutop.Entity.DTO.Treedata<Gutop.Entity.DTO.MenuInfo>(default(Gutop.Entity.DTO.MenuInfo));
+        wrapperMenuInfo.MathedItem?.GetRoot() ?? new Gutop.Model.Treedata<Gutop.Model.UrlMapWrapper>(default(Gutop.Model.UrlMapWrapper));
     mathedNav.GetAllChildren().ToList().ForEach(x => x.value.Url = string.IsNullOrEmpty(x.value.Url) ? default(string) : x.value.Url);
     int menuIndex = 0;
 }
@@ -118,7 +118,7 @@
                     foreach (var nav in wrapperMenuInfo.Value)
                     {
                         <li class="@(nav.value.Id == mathedNav.value?.Id ? "active" : string.Empty)">
-                            <a href="@(nav.value.Url)">@(nav.value.Name)</a>
+                            <a href="@(nav.value.Url)">@(nav.value.Description)</a>
                         </li>
                     }
                 }
@@ -143,7 +143,7 @@
                         <ul class="nav nav-sidebar">
                             <li class="@(m1.value.Active?"active":string.Empty)">
                                 <a data-toggle="@(m1.value.Url??"collapse")" href="@(m1.value.Url??string.Format("#collapseExample{0}",++menuIndex))">
-                                    <span>@(m1.value.Name)</span>
+                                    <span>@(m1.value.Description)</span>
                                     <span class="menu-xiangyou pull-right" style="@(m1.value.Collapsing||!string.IsNullOrEmpty(m1.value.Url)?"display:none":string.Empty)">
                                         <span class="glyphicon glyphicon-chevron-right"></span>
                                     </span>
@@ -158,7 +158,7 @@
                                         foreach (var m2 in m1.children)
                                         {
                                             <li class="@(m2.value.Active?"active":string.Empty)">
-                                                <a href="@(m2.value.Url)"><span>@(m2.value.Name)</span></a>
+                                                <a href="@(m2.value.Url)"><span>@(m2.value.Description)</span></a>
                                             </li>
                                         }
                                     }
